# testapi

./: .env-sample  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini  uwsgi.ini
message/: conftest.py  models.py  serializers.py  tests.py  views.py
message/management/commands/: generate_message.py
message/migrations/: 0001_initial.py  0002_alter_message_options.py
server-config/: nginx_sample  testapi.service
testapi/: settings.py  urls.py
