[tool.poetry]
name = "testapi"
version = "0.1.0"
description = ""
authors = ["Simon Chénard <chenard.simon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "^3.4.1"
astroid = "^2.9.0"
atomicwrites = "^1.4.0"
attrs = "^21.2.0"
distlib = "^0.3.3"
dj-database-url = "^0.5.0"
Django = "^3.2.9"
django-extensions = "^3.1.5"
djangorestframework = "^3.12.4"
entrypoints = "^0.3"
filelock = "^3.4.0"
flake8 = "^4.0.1"
importlib-metadata = "^4.8.2"
iniconfig = "^1.1.1"
isort = "^5.10.1"
lazy-object-proxy = "^1.6.0"
mccabe = "^0.6.1"
more-itertools = "^8.11.0"
packaging = "^21.3"
pluggy = "^1.0.0"
psycopg2 = "^2.9.2"
py = "^1.11.0"
pycodestyle = "^2.8.0"
pyflakes = "^2.4.0"
pyparsing = "^3.0.6"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
pytest-env = "^0.6.2"
pytz = "^2021.3"
six = "^1.16.0"
sqlparse = "^0.4.2"
toml = "^0.10.2"
tox = "^3.24.4"
typed-ast = "^1.5.0"
uWSGI = "^2.0.20"
virtualenv = "^20.10.0"
wcwidth = "^0.2.5"
wrapt = "^1.13.3"
zipp = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
